--- a/views/admin/viewCategory.hbs
+++ b/views/admin/viewCategory.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/stylesheets/dataTable.css">
 <main id="main" class="main">
   <section>
     <div class="container">
@@ -9,7 +10,7 @@
 
       </div>
 
-      <table class="table">
+      <table class="table mt-3 table-hover  rounded-2" id="categoryTable">
         <thead>
           <tr>
             <th scope="col">SI NO</th>
@@ -38,3 +39,10 @@
     </div>
   </section>
 </main>
+<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
+   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/jquery.dataTables.min.js"></script>
+  <script>
+    $(document).ready( function () {
+    $('#categoryTable').DataTable();
+} );
+</script>
