--- a/views/admin/viewCoupon.hbs
+++ b/views/admin/viewCoupon.hbs
@@ -1,13 +1,13 @@
 <main id="main" class="main">
-    <div>
-        <h3 class="text-primary">Add Product Offer</h3>
+  <link rel="stylesheet" href="/stylesheets/dataTable.css">
+    <div>Add Coupon Offer</h3>
         <hr>
     </div>
-    <div class="conatainer text-end me-5">
+    <div class="conatainer text-end me-5 m-4">
         <a href="/admin/addCoupoun"><i class="bi bi-file-earmark-plus"></i> Add coupon</a>
     </div>
     <div class="container">
-        <table class="table">
+        <table class="table table-hover  rounded-2" id="couponTable">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
@@ -61,11 +61,12 @@
               </div><!-- End Vertically centered Modal-->
 </main>
 
-
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 <script>
     function removeCoupon (id){
-     swal({
+  swal({
   title: "Are you sure?",
   text: "Once deleted, you will not be able to recover this imaginary file!",
   icon: "warning",
@@ -75,7 +76,7 @@
 .then((willDelete) => {
   if (willDelete) {
       $.ajax({
-            url : '/admin/removeCoupon',
+            url :'/admin/removeCoupon',
             method :'delete',
             data : {id},
             success :(response)=>{
@@ -95,4 +96,11 @@
   }
 });       
     }
+</script>
+   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
+   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/jquery.dataTables.min.js"></script>
+  <script>
+    $(document).ready( function () {
+    $('#couponTable').DataTable();
+} );
 </script>
