--- a/views/admin/viewOrders.hbs
+++ b/views/admin/viewOrders.hbs
@@ -10,10 +10,7 @@
         <th scope="col">Order Id</th>
         <th scope="col">Amount</th>
         <th scope="col">Payment</th>
-        <th scope="col">Status</th>
-        <th scope="col">Track Order</th>
-        <th scope="col">Update Status </th>
-
+        <th scope="col">Products</th>
       </tr>
     </thead>
     <tbody>
@@ -24,96 +21,16 @@
         <td>{{this.name}}</td>
         <td>{{this.date}}</td>
         <td>{{this._id}}</td>
-        <td>₹{{this.products.totalPrice}}</td>
+        <td>₹ {{this.totalAmount}}</td>
         <td>{{this.paymentMethod}}</td>
-        <td>{{this.status}}</td>
-        {{!-- <td>
-          <select class="form-select" aria-label="Default select example" onchange="">
-            <option value="ordered" selected>Ordered</option>
-            <option value="">Dispached</option>
-            <option value="2">Deliverd</option>
-            <option value="3" class="text-danger">Cancel</option>
-          </select>
-        </td> --}}
-        {{#if (cancel this.trackOrder)}}
-        <td class="text-danger">{{this.trackOrder}}</td>
-        {{else if (delivered this.trackOrder)}}
-        <td class="text-success">{{this.trackOrder}}</td>
-        {{else}}
-        <td>{{this.products.trackOrder}}</td>
-        {{/if}}
-        <td>
-          {{#if (cancel this.products.trackOrder)}}
-          <select class="form-select" aria-label="Default select example" id="{{this._id}}">
-            <option selected name="status" value="Orderd" class="text-danger" disabled>{{this.products.trackOrder}}</option>
-            <option name="status" value="Dispached" disabled>Dispached</option>
-            <option name="Shipped" value="Shipped" disabled>Shipped</option>
-            <option name="Delivered" value="Deliverd" disabled>Deliverd</option>
-            <option name="canceled" value="canceled" disabled>Canceled</option>
-          </select>
-          {{else if (delivered this.products.trackOrder)}}
-           <select class="form-select" aria-label="Default select example" id="{{this._id}}" onchange="changeStatus(event,'{{this._id}}','{{this.products.item}}')">
-            <option selected name="status" value="Orderd" disabled>{{this.products.trackOrder}}</option>
-            <option name="status" value="Dispached" disabled>Dispached</option>
-            <option name="Shipped" value="Shipped" disabled>Shipped</option>
-            <option name="Delivered" value="Deliverd" disabled>Deliverd</option>
-            <option name="canceled" value="canceled" disabled>Canceled</option>
-          </select>
-          {{else if (returnRequest this.products.trackOrder)}}
-          <select class="form-select" aria-label="Default select example" id="{{this._id}}" onchange="changeStatus(event,'{{this._id}}','{{this.products.item}}')">
-          <option selected name="status" value="Orderd" disabled>{{this.products.trackOrder}}</option>
-          {{else if (returnApproved this.products.trackOrder)}}
-          <select class="form-select" aria-label="Default select example" id="{{this._id}}" onchange="changeStatus(event,'{{this._id}}','{{this.products.item}}')">
-          <option selected name="status" value="Orderd" disabled>{{this.products.trackOrder}}</option>
-        {{else}}
-          <select class="form-select" aria-label="Default select example" id="{{this._id}}" onchange="changeStatus(event,'{{this._id}}','{{this.products.item}}')">
-            <option selected name="status" value="Orderd" disabled>{{this.products.trackOrder}}</option>
-            <option name="status" value="Dispached">Dispached</option>
-            <option name="Shipped" value="Shipped">Shipped</option>
-            <option name="Delivered" value="Deliverd">Deliverd</option>
-            <option name="canceled" value="canceled">Canceled</option>
-          </select>
-          {{/if}}
-        </td>
-      </tr>
+        <td><h1 class="bi bi-arrow-right-square-fill" onclick="viewOrderProduct('{{this._id}}')"></h1></td>
       {{/each}}
+      </tr>
     </tbody>
   </table>
 </main>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
-  function changeStatus(e,orderId,prodId) {
-    let status = e.target.value;
-    $.ajax({
-      url:'/admin/updateTrackOrder',
-      data:{
-        orderId:orderId,
-        prodId:prodId,
-        status:status
-      },
-      method :'put',
-      success : (response)=>{
-        if(response.status){
-          swal("Status Changed!").then(()=>{
-            location.reload();
-          })
-        }
-        else if(response.refund)
-        {
-          amount = response.amount
-          swal("Amount Refunded!", "An Amount of RS "+amount+"  is refunded", "success").then(()=>{
-            location.reload();
-          })
-        }
-          else if(response.COD)
-        {
-          amount = response.amount
-          swal("Status Changed!").then(()=>{
-            location.reload();
-          })
-        }
-      }
-    })
-  }
+    function viewOrderProduct(orderId){
+        location.href = '/admin/viewOrderProducts/'+ orderId;
+    }
 </script>
