--- a/views/users/home.hbs
+++ b/views/users/home.hbs
@@ -1,43 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- molla/index-17.html  22 Nov 2019 10:00:25 GMT -->
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>KAIROS</title>
-    <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="KAIROS - Bootstrap eCommerce Template">
-    <meta name="author" content="p-themes">
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/userAssets/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/userAssets/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/userAssets/images/icons/favicon-16x16.png">
-    <link rel="manifest" href="/userAssets/images/icons/site.html">
-    <link rel="mask-icon" href="/userAssets/images/icons/safari-pinned-tab.svg" color="#666666">
-    <link rel="shortcut icon" href="/userAssets/images/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="KAIROS">
-    <meta name="application-name" content="KAIROS">
-    <meta name="msapplication-TileColor" content="#cc9966">
-    <meta name="msapplication-config" content="/userAssets/images/icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/userAssets/vendor/line-awesome/line-awesome/line-awesome/css/line-awesome.min.css">
-    <!-- Plugins CSS File -->
-    <link rel="stylesheet" href="/userAssets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/userAssets/css/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="/userAssets/css/plugins/magnific-popup/magnific-popup.css">
-    <!-- Main CSS File -->
-    <link rel="stylesheet" href="/userAssets/css/style.css">
-    <link rel="stylesheet" href="/userAssets/css/skins/skin-demo-17.css">
-    <link rel="stylesheet" href="/userAssets/css/demos/demo-17.css">
-    {{!-- Google Fonts --}}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-</head>
-
 <body>
     <div class="page-wrapper">
         <main class="main">
@@ -701,7 +664,7 @@
                                     <li><a href="blog-grid-sidebar.html">Grid sidebar</a></li>
                                 </ul>
                             </li>
-                            <li>
+                            {{!-- <li>
                                 <a href="#">Masonry</a>
                                 <ul>
                                     <li><a href="blog-masonry-2cols.html">Masonry 2 columns</a></li>
@@ -709,27 +672,27 @@
                                     <li><a href="blog-masonry-4cols.html">Masonry 4 columns</a></li>
                                     <li><a href="blog-masonry-sidebar.html">Masonry sidebar</a></li>
                                 </ul>
-                            </li>
-                            <li>
+                            </li> --}}
+                            {{!-- <li>
                                 <a href="#">Mask</a>
                                 <ul>
                                     <li><a href="blog-mask-grid.html">Blog mask grid</a></li>
                                     <li><a href="blog-mask-masonry.html">Blog mask masonry</a></li>
                                 </ul>
-                            </li>
-                            <li>
+                            </li> --}}
+                            {{!-- <li>
                                 <a href="#">Single Post</a>
                                 <ul>
                                     <li><a href="single.html">Default with sidebar</a></li>
                                     <li><a href="single-fullwidth.html">Fullwidth no sidebar</a></li>
                                     <li><a href="single-fullwidth-sidebar.html">Fullwidth with sidebar</a></li>
                                 </ul>
-                            </li>
+                            </li> --}}
                         </ul>
                     </li>
 
                     <li>
-                        <a href="/whishlist">whishlist</a>
+                        <a href="/wishlist">whishlist</a>
 
                     </li>
                     {{/if}}
@@ -869,7 +832,6 @@
             </div><!-- End .modal-content -->
         </div><!-- End .modal-dialog -->
     </div><!-- End .modal -->
-
     <!-- Plugins JS File -->
     <script src="/userAssets/js/jquery.min.js"></script>
     <script src="/userAssets/js/bootstrap.bundle.min.js"></script>
