--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -631,6 +631,7 @@
 </div><!-- End .modal -->
 
 </html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
 
