--- a/views/users/singleProduct.hbs
+++ b/views/users/singleProduct.hbs
@@ -780,6 +780,12 @@
         </div><!-- End .modal-dialog -->
     </div><!-- End .modal -->
 
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/igorlino/elevatezoom-plus/1.1.6/src/jquery.ez-plus.js"></script> 
+    <script>
+		$("#zoom_01").ezPlus();
+	</script>
+    
     <script src="/userAssets/js/jquery.min.js"></script>
     <script src="/userAssets/js/bootstrap.bundle.min.js"></script>
     <script src="/userAssets/js/jquery.hoverIntent.min.js"></script>
