--- a/views/admin/viewCoupon.hbs
+++ b/views/admin/viewCoupon.hbs
@@ -62,7 +62,7 @@
 </main>
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 <script>
     function removeCoupon (id){
@@ -85,8 +85,7 @@
                      swal("Poof! Your  Coupon has been deleted!", {
                      icon: "success",
                      }).then(()=>{
-                        location.reload()
-                        
+                        location.reload()  
                      })
                 }
             }
@@ -97,8 +96,8 @@
 });       
     }
 </script>
-   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
-   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/jquery.dataTables.min.js"></script>
+   {{!-- <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
+   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/jquery.dataTables.min.js"></script> --}}
   <script>
     $(document).ready( function () {
     $('#couponTable').DataTable();
