--- a/views/admin/viewOrderProduct.hbs
+++ b/views/admin/viewOrderProduct.hbs
@@ -88,7 +88,7 @@
 
 <script>
     function changeStatus(e, orderId, prodId) {
-        quantity = document.getElementById('quantityIn').value
+        quantity = document.getElementById('quantityIn').value;
         let status = e.target.value;
         $.ajax({
             url: '/admin/updateTrackOrder',
