--- a/views/admin/viewOrders.hbs
+++ b/views/admin/viewOrders.hbs
@@ -1,7 +1,7 @@
 <main class="main" id="main">
   <h4>View Orders</h4>
   <hr>
-  <table class="table table-striped mt-5">
+  <table class="table table-borderless datatable">
     <thead>
       <tr>
         <th scope="col">Si.No</th>
